# llamas-pyjamas

./: .gitignore  BUILD_INSTRUCTIONS.md  README.md  pyproject.toml
Arc/: arcLlamas.py  arcReidentify.py  nistArc.py
Extract/: extractLlamas.py
Flat/: scattered2dLlamas.py
Image/: WhiteLight.py
Test/: llamas_arcqa.py  llamas_blue_arcfit.py  llamas_extraction_proc.py  llamas_trace.py  llamas_trace_oldtest.py  llamasb_reduce.py  llamasg_reduce.py  llamasr_reduce.py  pydl.py  test_qa_engine_header.py  tt.py
Trace/: traceLlamas.py  traceLlamasMulti.py
docs/: .buildinfo  .gitignore  Makefile  README.md  build_docs.sh  conf.py  examples.html  genindex.html  index.html  index.rst  installation.html  installation.rst  llamas_pyjamas.Arc.html  llamas_pyjamas.Bias.html  llamas_pyjamas.Extract.html  llamas_pyjamas.File.html  llamas_pyjamas.File.rst  llamas_pyjamas.Flat.html  llamas_pyjamas.Flux.html  llamas_pyjamas.GUI.html  llamas_pyjamas.GUI.rst  llamas_pyjamas.Image.html  llamas_pyjamas.Postprocessing.html  llamas_pyjamas.QA.html  llamas_pyjamas.Trace.html  llamas_pyjamas.Utils.html  objects.inv  py-modindex.html  quickstart.html  quickstart.rst  requirements.txt  search.html  searchindex.js  tutorials.html
llamas_pyjamas/: __init__.py  __main__.py  config.py  constants.py  example_config.txt  llamas_extraction_demo.ipynb  reduce.py  test_centroid.py  test_combine_coadd.py  test_combine_cube.py  test_combine_fluxanchor.py  test_combine_spectrum.py  test_combine_superrss.py  test_combine_transparency.py  test_cubeview_cube.py  test_cubeview_ds9.py  test_cubeview_obslog.py  test_cubeview_pick.py  test_cubeview_register.py  test_cubeview_sensfunc.py  test_deadfibers.py  (+14 more)
(+450 files in other folders)
