[tool.poetry]
name = "llamas-pyjamas"
version = "0.1.0"
description = "Data Reduction Pipeline for the Magellan LLAMAS Integral Field Spectrograph"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.11,<3.13"
pypeit = ">=1.17.0"
scipy = ">=1.12.0"
astropy = ">=6.1.3"
numpy = ">=1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
