[tool.poetry]
name = "llamas-pyjamas"
version = "0.1.0"
description = "Data Reduction Pipeline for the Magellan LLAMAS Integral Field Spectrograph"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.11,<3.13"
pypeit = ">=1.17.0"
scipy = ">=1.8.0"
astropy = ">=6.1.3"
numpy = ">=1.26.4,<2"
ipython = "^8.29.0"
jupyter = "^1.1.1"
pyds9 = "^1.8.1"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
