[tool.poetry]
name = "llamas-pyjamas"
version = "0.1.0"
description = "Data Reduction Pipeline for the Magellan LLAMAS Integral Field Spectrograph"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.11,<3.13"
pypeit = ">=1.17.0"
scipy = ">=1.8.0"
astropy = ">=6.1.3"
numpy = "2.2.1"
ipython = "^8.29.0"
jupyter = "^1.1.1"
matplotlib = "^3.9.2"
ray = "^2.39.0"
pyqt6 = "^6.7.1"
cloudpickle = "^3.1.1"
setuptools = "^80.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
